--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@
 
 # production
 /build
+/client/build
 
 # misc
 .DS_Store
@@ -18,6 +19,10 @@
 .env.development.local
 .env.test.local
 .env.production.local
+/client/build/.env.local
+/client/build/.env.development.local
+/client/build/.env.test.local
+/client/build/.env.production.local
 
 npm-debug.log*
 yarn-debug.log*
